--- a/composer.json
+++ b/composer.json
@@ -12,10 +12,10 @@
     ],
     "minimum-stability": "stable",
     "require": {
-        "php": ">=5.4.0"
+        "php": ">=8.0.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^6.1"
+        "phpunit/phpunit": "^8.1",
     },
     "scripts": {
         "post-install-cmd": [
