--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         "php": ">=8.0.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^8.1",
+        "phpunit/phpunit": "^8.1"
     },
     "scripts": {
         "post-install-cmd": [
